@@ -6,6 +6,8 @@ Revision history for Log::Log4perl
     * (kg) adjusting tests for XML::Parser 2.32 having broken
       XML::DOM 1.42 and lower
     * (ms) Added signal handling to init_and_watch
+    * (ms) renamed l4p-internal DEBUG constant to avoid confusion with
+      DEBUG() and $DEBUG as suggested by Jim Cromie <jcromie@divsol.com>.
 
 0.36 (07/22/2003)
     * (ms) Matthew Keene <mkeene@netspace.net.au> suggested to have
